--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,16 @@ body {
     font-family: 'Lato';
 }
 
+#delivery-banner {
+    background-color: rgba(255, 0, 0, 0.767);
+    opacity: .8;
+}
+
+.display-4  {
+    background-color: rgba(255, 0, 0, 0.767);
+    opacity: .8;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -17,11 +27,6 @@ body {
     justify-content: center;
     height: 1.5rem;
     width: 1.5rem;
-}
-
-.display-4 {
-    background-color: rgba(255,0,0);
-    opacity: 0.6;
 }
 
 .logo-font {
@@ -59,6 +64,10 @@ body {
 
 .border-black {
     border: 1px solid black !important;
+}
+
+.bg-black {
+    background: #000 !important;
 }
 
 /* -------------------------------- Media Queries */
