--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -13,7 +13,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="Home Kit" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}?category=Home_Kit" id="Home_Kit" aria-haspopup="true" aria-expanded="false">
                 Home Kit
             </a>
 
