--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,9 +15,11 @@ body {
     opacity: .8;
 }
 
-.display-4  {
+.display-8  {
     background-color: rgba(255, 0, 0, 0.767);
     opacity: .8;
+    text-align: center;
+
 }
 
 /* from Bulma */
@@ -93,6 +95,11 @@ body {
 	z-index: -1;
 }
 
+a.category-badge > span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
+}
+
 .btt-button {
     height: 42px;
     width: 42px;
@@ -105,6 +112,10 @@ body {
 .update-link,
 .remove-item {
     cursor: pointer;
+}
+
+input[name='q']::placeholder {
+    color: #aab7c4;
 }
 
 /* ------------------------------- bootstrap toasts */
@@ -265,6 +276,7 @@ body {
     border-color: #dc3545;
     border-radius: 0;
 }
+
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
