--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,16 +1,26 @@
-{ % extends 'base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container my-auto text-center">
-    <h1 class="my-5 text-black">
-        Page not found
-    </h1>
-    <p>The page you were looking for doesn't exist.</p>
-    <p>Check for spelling mistake's also the page may haved moved.</p>
-    <div class="my-5">
-        <a href="{% url 'home' %}" class="text-decoration-none category-badge">
-            Back Home <i class="fas fa arrow-alt-circle-left" aria-hidden="true"></i>
-        </a>
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
     </div>
-</div>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-7 col-md-6 my-auto">
+                <h1 class="display-4 logo-font text-black">
+                    The page you are looking for isn't available
+                </h1>
+                <div class="my-5">
+                    <h4>
+                        <a href="{% url 'products' %}" 
+                            class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
+                                Return to shop
+                        </a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
