--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -66,4 +66,17 @@
       <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
-  </footer>
+
+    <div class="col-lg-3 text-center text-lg-left d-flex flex-column align-items-center order-first align items-lg-start order-lg-last item social">
+        <h4 class="font-weight-bold mb-2"><strong>Subscribe to our newsletter</strong></h4>
+        <form class="d-flex justify-content-center flex-wrap" method="POST" action="">
+          {% csrf_token %}
+          <div class="my-2"><input class="form-control" type="email" name="email" placeholder="Your Email"></div>
+          <div class="my-2"><button class="btn btn-outline-black ml-2" type="submit">Subscribe</button></div>
+        </form>
+    </div>
+
+
+
+
+</footer>
