--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-light text-center text-white">
+<footer class="bg-red text-center text-white">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
     <!-- Section: Social media -->
@@ -30,12 +30,11 @@
   </div>
   <!-- Grid container -->
 
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2023 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  <div class="footer-menu p-1">
+    <div class="justify-content-center">
+      <a class="text-decoration-none px-3 mb-" href="{% url 'privacy' %}">Privacy</a>
+    </div>
   </div>
-  <!-- Copyright -->
 
   <div id="mc_embed_shell">
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
@@ -62,14 +61,6 @@
           <div class="optionalParent">
             <div class="clear foot">
               <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-              <p style="margin: 0px auto;"><a href="http://eepurl.com/ixtxNk"
-                  title="Mailchimp - email marketing made easy and fun"><span
-                    style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
-                      class="refferal_badge"
-                      src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                      alt="Intuit Mailchimp"
-                      style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
-              </p>
             </div>
           </div>
         </div>
