--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,92 +1,82 @@
-<footer class="bg-red text-center text-white">
-  <!-- Grid container -->
-  <div class="container p-4 pb-0">
-    <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn text-white btn-floating m-1" style="background-color: #3b5998;" href="https://www.facebook.com/"
-        target="_blank" rel="noopener" role="button"><i class="fab fa-facebook-f"></i></a>
-
-      <!-- Twitter -->
-      <a class="btn text-white btn-floating m-1" style="background-color: #55acee;" href="https://twitter.com/"
-        target="_blank" rel="noopener" role="button"><i class="fab fa-twitter"></i></a>
-
-      <!-- Google -->
-      <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39;" href="https://myaccount.google.com/"
-        target="_blank" rel="noopener" role="button"><i class="fab fa-google"></i></a>
-
-      <!-- Instagram -->
-      <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;" href="https://www.instagram.com/"
-        target="_blank" rel="noopener" role="button"><i class="fab fa-instagram"></i></a>
-
-      <!-- Linkedin -->
-      <a class="btn text-white btn-floating m-1" style="background-color: #0082ca;" href="https://www.linkedin.com/"
-        target="_blank" rel="noopener" role="button"><i class="fab fa-linkedin-in"></i></a>
-      <!-- Github -->
-      <a class="btn text-white btn-floating m-1" style="background-color: #333333;" href="https://github.com/"
-        target="_blank" rel="noopener" role="button"><i class="fab fa-github"></i></a>
-    </section>
-    <!-- Section: Social media -->
-  </div>
-  <!-- Grid container -->
-
-  <div class="footer-menu p-1">
-    <div class="justify-content-center">
-      <a class="text-decoration-none px-3 mb-" href="{% url 'privacy' %}">Privacy</a>
-    </div>
-  </div>
-
-  <div id="mc_embed_shell">
-    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-    <div id="mc_embed_signup">
-      <form
-        action="https://herokuapp.us21.list-manage.com/subscribe/post?u=1ec2c747a831d60b9b60976b7&amp;id=e688cd494f&amp;f_id=001d63e1f0"
-        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-        target="_blank">
-        <div id="mc_embed_signup_scroll">
-          <h2>Subscribe</h2>
-          <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-          <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input
-              type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""><span
-              id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
-          <div id="mce-responses" class="clear foot">
-            <div class="response" id="mce-error-response" style="display: none;"></div>
-            <div class="response" id="mce-success-response" style="display: none;"></div>
+<footer class="bg-light text-center" style="padding-top: 40px; padding-bottom: 40px;">
+    <div class="row remove-footer-gutter">
+        <div class="col-md-8 ps-sm-4">
+            <div id="mc_embed_signup">
+                <form action="https://herokuapp.us21.list-manage.com/subscribe/post?u=1ec2c747a831d60b9b60976b7&amp;id=e688cd494f&amp;f_id=001d63e1f0"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll" class="row justify-content-center">
+                        <div class="col">
+                            <div class="mc-field-group" style="padding-top: 15px;">
+                                <input type="email" name="EMAIL" class="required email form-control"
+                                    id="mce-EMAIL" required autocomplete="none" placeholder="Email Address" value="">
+                                <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                            </div>
+                            <div id="mce-responses" class="clear foot">
+                                <div class="response" id="mce-error-response" style="display: none;"></div>
+                                <div class="response" id="mce-success-response" style="display: none;"></div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" 
+                                    name="b_1ec2c747a831d60b9b60976b7_e688cd494f" tabindex="-1" value="">
+                            </div>
+                            <div class="optionalParent">
+                                <div class="foot d-flex align-items-center justify-content-center">
+                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success" 
+                                        value="Subscribe!">
+                                </div>
+                             </div>
+                          </div>
+                      </div>
+                  </form>
+              </div>
           </div>
-          <div aria-hidden="true" style="position: absolute; left: -5000px;">
-            /* real people should not fill this in and expect good things - do not remove this or risk form bot signups
-            */
-            <input type="text" name="b_1ec2c747a831d60b9b60976b7_e688cd494f" tabindex="-1" value="">
-          </div>
-          <div class="optionalParent">
-            <div class="clear foot">
-              <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-            </div>
+          <div class="col social-links offset-md-1 text-black">
+            <!-- Social media -->
+            <!-- Facebook -->
+            <a class="btn btn-outline-dark btn-floating m-1 text-black" href="https://www.facebook.com/" target="_blank"
+              rel="noopener" aria-label="facebook"><i class="fab fa-facebook-f"></i></a>
+            <!-- Google -->
+            <a class="btn btn-outline-dark btn-floating m-1 text-black" href="https://myaccount.google.com/" target="_blank"
+              rel="noopener" aria-label="google"><i class="fab fa-google"></i></a>
+
+            <!-- Instagram -->
+            <a class="btn btn-outline-dark btn-floating m-1 text-black" href="https://www.instagram.com/" target="_blank"
+              rel="noopener" aria-label="instgram"><i class="fab fa-instagram"></i></a>
+
+            <!-- Linkedin -->
+            <a class="btn btn-outline-dark btn-floating m-1 text-black" href="https://www.linkedin.com/" target="_blank"
+              rel="noopener" aria-label="linkedin"><i class="fab fa-linkedin-in"></i></a>
+
           </div>
         </div>
-      </form>
-    </div>
-    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-    <script type="text/javascript">
-      (function ($) {
-        window.fnames = new Array();
-        window.ftypes = new Array();
-        fnames[0] = 'EMAIL';
-        ftypes[0] = 'email';
-        fnames[1] = 'FNAME';
-        ftypes[1] = 'text';
-        fnames[2] = 'LNAME';
-        ftypes[2] = 'text';
-        fnames[3] = 'ADDRESS';
-        ftypes[3] = 'address';
-        fnames[4] = 'PHONE';
-        ftypes[4] = 'phone';
-        fnames[5] = 'BIRTHDAY';
-        ftypes[5] = 'birthday';
-      }(jQuery));
-      var $mcj = jQuery.noConflict(true);
-    </script>
-  </div>
 
+        <div class="footer-menu p-1">
+          <div class="justify-content-center">
+            <a class="text-decoration-none px-3 mb-" href="{% url 'privacy' %}">Privacy</a>
+          </div>
+        </div>
 
 </footer>
+
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+<script type="text/javascript">
+  (function ($) {
+    window.fnames = new Array();
+    window.ftypes = new Array();
+    fnames[0] = 'EMAIL';
+    ftypes[0] = 'email';
+    fnames[1] = 'FNAME';
+    ftypes[1] = 'text';
+    fnames[2] = 'LNAME';
+    ftypes[2] = 'text';
+    fnames[3] = 'ADDRESS';
+    ftypes[3] = 'address';
+    fnames[4] = 'PHONE';
+    ftypes[4] = 'phone';
+    fnames[5] = 'BIRTHDAY';
+    ftypes[5] = 'birthday';
+  }(jQuery));
+  var $mcj = jQuery.noConflict(true);
+</script>
