set debug to true to check error

--- a/privacy/templates/privacy/privacy.html
+++ b/privacy/templates/privacy/privacy.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row justify-text">
         <div class="col-8">
-            <p class="privacy-text">{{ pvc.privacy_policy }}</p>
+            <p class="privacy-text">{{ pvc.privacy }}</p>
         </div>
     </div>
     {% endfor %}
