--- a/privacy/templates/privacy/privacy.html
+++ b/privacy/templates/privacy/privacy.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{* load static %}
+{% load static %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -18,11 +18,12 @@
     </div>
     <div class="row justify-text">
         <div class="col-8">
-            <p class="privacy-text">{{ pvc.privacy }}</p>
+            <p class="privacy-text">{{ pvc.privacy_policy }}</p>
         </div>
     </div>
     {% endfor %}
 </div>
+
 
 <h1>Privacy Policy for Arsenal FC store</h1>
 
