--- a/static/css/base.css
+++ b/static/css/base.css
@@ -197,6 +197,10 @@ input[name='q']::placeholder {
     text-align: justify;
 }
 
+footer {
+    overflow-x: hidden;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
