--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -34,7 +34,7 @@
             </a>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}?category=Accessories" id="Retro Kit" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}?category=Accessories" id="Accessories" aria-haspopup="true" aria-expanded="false">
                 Accessories
             </a>
     </ul>
