--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -55,6 +55,7 @@
         <div class="footer-menu p-1">
           <div class="justify-content-center">
             <a class="text-decoration-none px-3 mb-" href="{% url 'privacy' %}">Privacy</a>
+            <a class="text-decoration-none px-3 mb-" href="{% url 'contact' %}">Contact</a>
           </div>
         </div>
 
