--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-8 logo-font text-white">
-                    Shop the new 23/24 Home and Away kit
+                    Welcome to the Arsenal FC store
                 </h1>
                 <div class="my-5">
                     <h4>
