--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -200,9 +200,9 @@
                         <span class="text-uppercase">Back to Profile</span>
                     </a>
                 {% else %}
-                    <a href="{% url 'products' %} class="btn btn-black rounded-0 my-2">
+                    <a href="{% url 'products' %}" class=btn btn-black rounded-0 my-2">
                         <span class="icon mr-2">
-                            <i class="fas fa-gifts"></i>
+                            <i class="fas fa-home"></i>
                         </span>
                         <span class="text-uppercase">Back to store</span>
                     </a>
